--- a/filpgame/style/main.css
+++ b/filpgame/style/main.css
@@ -57,7 +57,7 @@
           left: 50%;
           width: 400px;
           height: 300px;
-          background: url("./img/fram.png");
+          background: url("../img/fram.png");
           background-size: 400px 300px;
           text-align: center;
           border-radius: 10px;
@@ -78,7 +78,7 @@
       }
       .yes
       {
-        background: url("./img/button1_up.png");
+        background: url("../img/button1_up.png");
 
         background-size: 100px 32px;
         cursor: pointer;
@@ -87,11 +87,11 @@
       }
       .yes:hover
       {
-        background: url("./img/button1_down.png");
+        background: url("../img/button1_down.png");
         background-size: 100px 32px;
       }
       .no{
-        background: url("./img/button2_up.png");
+        background: url("../img/button2_up.png");
         background-size: 100px 32px;
         cursor: pointer;
         color:white;
@@ -100,7 +100,7 @@
       }
       .no:hover
       {
-        background: url("./img/button2_down.png");
+        background: url("../img/button2_down.png");
         background-size: 100px 32px;
       }
       .time{
@@ -113,7 +113,7 @@
         font-family: sans-serif;
         font-weight: bold;
       }
-      .menu,.startmenu
+      .menu,.startmenu,.rankmenu
       {
         position: absolute;
         top:50%;
@@ -128,6 +128,44 @@
         align-items: center;
         background-color: rgb(30, 52, 76);
         border: 18px solid rgb(12, 26, 39);
+      } 
+      .rankmenu 
+      {
+        justify-content: start;
+        position:fixed;
+        display: none;
+      }
+      .rankmenu h1
+      {
+        color:rgb(243, 162, 44);
+        padding: 20px 0 5px 0;
+      }
+      .rankmenu ul
+      {
+        padding: 0;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+      }
+      .rankmenu ul li
+      {
+        border-radius: 20px;
+        color:white;
+        width: 180px;
+        padding: 5px;
+        font-size: 30px;
+        background-color: rgb(243, 162, 44);
+        margin: 15px 0px;
+        text-align: center;
+        box-shadow: 0px 7px 0px rgb(222, 66, 40),0px 3px 6px rgba(0, 0, 0, .9),inset 1px -1px 11px 4px rgba(246,113,36);
+        transition: .3s;
+        cursor: pointer;
+        user-select: none;
+        font-weight: bold;
+        border: 0;
+        outline: 0;
       }
       .menu{
           display: none;
@@ -185,3 +223,85 @@
         -webkit-transform:translate3d(0,0,0);
         background-color: rgba(0, 0, 0, .6);
       }
+      .rankbt{
+        width: 40px;
+        height: 40px;
+        background-color:rgb(243, 162, 44);
+        box-shadow:0px 5px 0px rgb(222, 66, 40),0px 3px 6px rgba(0, 0, 0, .9);
+        text-align: center;
+        line-height: 40px;
+        border-radius: 50%;
+        color:white;
+        font-size: 25px;
+        cursor: pointer;
+        top:0px;
+        left: 0px;
+        position:absolute;
+      }
+
+
+
+      /* rankmenu style start */
+
+      .Ranking
+      {
+        font-size: 30px;
+        color: white;
+        font-weight: bold;
+        width: 20%;
+      }
+      .rankname
+      {
+        font-size: 20px;
+        color: black;
+        font-weight: bold;
+        width: 50%;
+      }
+      .rankscore
+      {
+        font-size: 20px;
+        color: black;
+        font-weight: bold;
+        width: 30%;
+        text-align: center;
+        
+      }
+      .level1rank
+      {
+        width: 100%;
+        line-height: 36px;
+       
+      }
+      .level1rank div
+      {
+        background-color:rgb(243, 162, 44);
+        margin: 10px;
+        padding-left: 20px;
+        display: flex;
+        border-radius: 5px;
+      }
+      .returnbt,.closebt
+      {
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        background-color:rgb(243, 162, 44);
+        box-shadow:0px 5px 0px rgb(222, 66, 40),0px 3px 6px rgba(0, 0, 0, .9);
+        text-align: center;
+        line-height: 40px;
+        border-radius: 50%;
+        color:white;
+        font-size: 25px;
+        cursor: pointer;
+      }
+      .returnbt
+      {
+        top: 10px;
+        left: 10px;
+        display: none;
+      }
+      .closebt{
+        top: -5px;
+        right: -5px;
+      }
+      /* rankmenu end */
